# cppcocotools

./: .gitignore  CMakeLists.txt  main.cpp
src/: coco.cpp  coco.h  cocoeval.cpp  cocoeval.h
